2007-02-18  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3325]
	* sysdeps/i386/fpu/e_fmodf.S: Use fprem1 instead of fprem.
	* sysdeps/i386/fpu/e_fmodl.c: Likewise.
	* sysdeps/i386/fpu/e_fmod.S: Likewise.
	Patch by Jared Casper <jaredcasper@gmail.com>.

	* sysdeps/unix/closedir.c: Outside libc don't use locking.
	* sysdeps/unix/opendir.c: Likewise.
	* sysdeps/unix/readdir.c: Likewise.

	[BZ #2211]
	* stdio-common/vfscanf.c: Handle localized digits etc for floating
	point numbers.
	Patch mostly by Hamed Malek <hamed@farsiweb.info>.

	* stdio-common/vfscanf.c: Fix problems in width accounting.
	* stdio-common/tst-sscanf.c (double_tests): New tests.
	(main): Hook them up.

	* stdio-common/vfscanf.c: Remove unused WIDTH handling.
	More simplifications of floating-point reader.

	* stdio-common/Makefile (tests): Add tst-swscanf.
	* stdio-common/tst-sscanf.c: Make tests usable for swscanf
	testing.
	* stdio-common/tst-swscanf.c: New file.

2007-02-17  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2633]
	* libio/stdio.h: Define struct _IO_FILE in global namespace.
	* setjmp/setjmp.h: Define __jmp_buf_tag in global namespace.
	Remove using for __jmp_buf_tag.
	* locale/locale.h (struct lconv): Also define in std namespace.
	* wcsmbs/wchar.h: Move using declaration for tm out of namespace.

	[BZ #3842]
	* sysdeps/posix/euidaccess.c [_LIBC] (euidaccess): Remove shortcut
	using __libc_enable_secure.

	[BZ #3818]
	* sysdeps/unix/sysv/linux/sys/acct.h (struct acct_v3): Define.

	[BZ #3745]
	* locale/programs/ld-collate.c (handle_ellipsis): Fix generation
	of names for ellipsises.

	[BZ #3348]
	* malloc/memusage.sh: Cleanups.
	* debug/xtrace.sh: Quoting and trap changes.

2007-02-16  Ulrich Drepper  <drepper@redhat.com>

	* locale/iso-3166.def: Add Jersey, Guernsey, and Isle Of Man entries.

	* locale/iso-3166.def: Update entry for Serbia.
	* locale/iso-4217.def: Define RSD, remove CSD.

	* sysdeps/x86_64/bits/atomic.h: One more change, this time for 16-
	and 64-bit operations.
